--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -5,6 +5,8 @@ on:
             - '**'
             - '!master'
         paths:
+            - '**/package.json'
+            - '**/yarn.lock'
             - 'frontend/**'
             - 'client/**'
             - 'firstload/**'
