--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"author": "Highlight",
 	"license": "MIT",
 	"dependencies": {
+		"click-to-react-component": "^1.0.8",
 		"concurrently": "^6.5.1"
 	},
 	"scripts": {
