--- a/frontend/package.json
+++ b/frontend/package.json
@@ -86,7 +86,7 @@
 		"dev:gql": "graphql-codegen --config --watch codegen.yml",
 		"gql:nowatch": "graphql-codegen --config codegen.yml",
 		"build": "vite build",
-		"test": "TZ=UTC TEST=1 vitest",
+		"test": "TZ=UTC vitest",
 		"lint": "yarn lint:es && stylelint \"**/*.scss\"",
 		"lint:es": "eslint --fix \"src/**/*.{ts,tsx}\"",
 		"lint:css": "stylelint \"**/*.scss\" --fix",
@@ -138,7 +138,7 @@
 		"@types/validator": "^13.1.3",
 		"@typescript-eslint/eslint-plugin": "^5.30.6",
 		"@typescript-eslint/parser": "^5.30.6",
-		"@vitejs/plugin-react": "^2.0.1",
+		"@vitejs/plugin-react": "^2.1.0",
 		"autoprefixer": "^10.4.8",
 		"eslint": "^7.0.0",
 		"eslint-config-prettier": "^7.2.0",
@@ -159,11 +159,11 @@
 		"tailwindcss": "^3.1.8",
 		"typed-scss-modules": "^3.4.0",
 		"typescript": "^4.8.2",
-		"vite": "^3.0.9",
+		"vite": "^3.1.3",
 		"vite-plugin-imp": "^2.3.0",
 		"vite-plugin-svgr": "^2.2.1",
 		"vite-tsconfig-paths": "^3.5.0",
-		"vitest": "^0.22.1"
+		"vitest": "^0.23.4"
 	},
 	"resolutions": {
 		"react-error-overlay": "6.0.9"
