ignore node_modules and js files in sourcemap uploader (#3095)
## Summary

Since `.js` files that are part of the build process are publicly accessible to our backend, there is
no need to upload them to the sourcemap S3 bucket. Ensure we only upload `.map` files and avoid
`node_modules` and directories named `X.map`

## How did you test this change?

Manual testing:
```bash
cd frontend
yarn; SOURCEMAP=true yarn build
cd ../sourcemap-uploader
yarn exec ./index.js -- upload --apiKey 'asdf' --path ../frontend/build

yarn exec v1.22.18
Starting to upload source maps from ../frontend/build
Uploaded assets/HitTargets.7ea57cd0.js.map
Uploaded assets/HitTargets.7ea57cd0.js
Uploaded assets/Buttons.module.49443465.js.map
Uploaded assets/Buttons.module.49443465.js
Uploaded assets/InternalPage.9cf31509.js.map
Uploaded assets/InternalPage.9cf31509.js
Uploaded assets/QueryBuilderPage.7109be2a.js
Uploaded assets/Buttons.40bc21fe.js
Uploaded assets/QueryBuilderPage.7109be2a.js.map
Uploaded assets/OpenSearchQueryPage.15098eb8.js
Uploaded assets/Buttons.40bc21fe.js.map
Uploaded assets/OpenSearchQueryPage.15098eb8.js.map
Uploaded assets/index.29a265ae.js
Uploaded assets/index.29a265ae.js.map
Uploaded assets/index.14dacf45.js
Uploaded assets/index.14dacf45.js.map
✨  Done in 20.37s.
```

Adding a CI step to frontend build to use and validate our sourcemap uploader.

## Are there any deployment considerations?

N/A

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -3,7 +3,6 @@ on:
     push:
         branches:
             - '**'
-            - '!master'
         paths:
             - 'frontend/**'
             - '.github/workflows/frontend.yml'
@@ -85,4 +84,8 @@ jobs:
             - name: Runs linting
               run: cd frontend && yarn test
             - name: Build Bundle
-              run: export NODE_OPTIONS='--max-old-space-size=7168' && cd frontend && CI=false yarn build
+              run: export NODE_OPTIONS='--max-old-space-size=7168' && cd frontend && CI=false SOURCEMAP=true yarn build
+            - name: Upload Sourcemaps
+              run: cd frontend && npx --yes @highlight-run/sourcemap-uploader upload --apiKey "${API_KEY}" --path ./build
+              env:
+                  API_KEY: ${{ secrets.HIGHLIGHT_SOURCEMAP_API_KEY }}
