--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"scripts": {
 		"prepare": "husky install",
+		"frontend:clean": "concurrently 'rm -rf node_modules' 'cd frontend && rm -rf node_modules' 'cd client && rm -rf node_modules' 'cd firstload && rm -rf node_modules'",
 		"frontend:install": "yarn && concurrently 'cd frontend && yarn' 'cd client && yarn' 'cd firstload && yarn'",
 		"frontend:start": "run-p --print-label --race dev:frontend dev:client dev:client-gql dev:firstload",
 		"dev": "run-p --print-label --race dev:*",
@@ -20,13 +21,22 @@
 		"dev:firstload": "cd firstload && yarn dev",
 		"dev:redis": "redis-server",
 		"generate": "hygen",
-		"g": "hygen",
+		"g": "yarn generate",
 		"format": "prettier --write --ignore-unknown . \"!./data\"",
-		"format-check": "prettier --check --ignore-unknown . \"!./data\""
+		"format-check": "prettier --check --ignore-unknown . \"!./data\"",
+		"ci:backend": "cd backend && doppler run -- ./backend",
+		"ci:build": "cd backend && go build",
+		"ci:install": "yarn ci:install:go && yarn ci:install:yarn",
+		"ci:install:go": "cd backend && go build",
+		"ci:install:yarn": "yarn --prefer-offline && cd frontend && yarn --prefer-offline && cd ../client && yarn --prefer-offline",
+		"ci:start": "run-p --print-label --race dev:frontend dev:client ci:backend",
+		"cy:run": "cypress run",
+		"cy:run:chrome": "cypress run --headed --browser chrome"
 	},
 	"devDependencies": {
 		"@types/node": "^18.7.14",
 		"chalk": "^5.0.1",
+		"cypress": "^10.8.0",
 		"husky": "^8.0.1",
 		"hygen": "^6.2.7",
 		"npm-run-all": "^4.1.5",
