--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -42,11 +42,11 @@ jobs:
               id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
               with:
                   path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+                  key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
                   restore-keys: |
                       ${{ runner.os }}-yarn-
             - name: Install main dependencies
-              run: cd frontend && yarn
+              run: yarn
             - name: copy frontend
               run: |
                   mkdir tmp
@@ -76,11 +76,11 @@ jobs:
               id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
               with:
                   path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+                  key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
                   restore-keys: |
                       ${{ runner.os }}-yarn-
             - name: Install main dependencies
-              run: cd frontend && yarn
+              run: yarn
             - name: Runs linting
               run: cd frontend && yarn test
             - name: Build firstload (highlight.run)
