--- a/client/package.json
+++ b/client/package.json
@@ -2,11 +2,12 @@
 	"name": "@highlight-run/client",
 	"private": true,
 	"version": "1.3.0",
-	"description": "rollup setup for writing a javascript library and making it availabe as script or npm package",
+	"description": "rollup setup for writing a javascript library and making it available as script or npm package",
 	"main": "dist/index.js",
-	"module": "dist/index.mjs",
+	"module": "dist/indexESM.js",
+	"types": "dist/src/index.d.ts",
 	"scripts": {
-		"build": "rollup -c",
+		"build": "tsc && rollup -c",
 		"dev": "doppler run -- rollup -c -w",
 		"gql": "graphql-codegen --config --watch codegen.yml",
 		"test": "jest --passWithNoTests"
