--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -9,13 +9,18 @@
 		"baseUrl": "src",
 		"strict": true,
 		"forceConsistentCasingInFileNames": true,
+		"declaration": true,
+		"declarationDir": "dist",
+		"emitDeclarationOnly": true,
 		"module": "esnext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "react",
 		"downlevelIteration": true,
-		"rootDir": ".."
+		"composite": true
 	},
-	"include": ["src"]
+	"include": ["src"],
+	"exclude": ["src/**/*.test.tsx"],
+	"files": ["package.json"]
 }
