--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
 		"@datadog/browser-logs": "^4.13.0",
 		"@fontsource/poppins": "^4.5.9",
 		"@frontapp/plugin-sdk": "^1.1.2",
+		"@highlight-run/client": "workspace:*",
 		"@highlight-run/react": "^1.2.1",
 		"@highlight-run/react-mentions": "4.4.1",
 		"@highlight-run/react-select": "^5.2.2",
