--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -31,5 +31,6 @@
 			"@lottie/*": ["./lottie/*"]
 		}
 	},
-	"exclude": ["**/node_modules/**", "**/build/**"]
+	"exclude": ["**/node_modules/**", "**/build/**"],
+	"references": [{ "path": "../client" }, { "path": "../firstload" }]
 }
