--- a/firstload/package.json
+++ b/firstload/package.json
@@ -14,6 +14,8 @@
 		"@highlight-run/client": "workspace:*"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.19.1",
+		"@babel/preset-typescript": "^7.18.6",
 		"@rollup/plugin-commonjs": "^22.0.1",
 		"@rollup/plugin-json": "^4.1.0",
 		"@rollup/plugin-node-resolve": "^13.3.0",
