--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
 		"frontend:start": "run-p --print-label --race dev:frontend dev:client dev:client-gql dev:firstload",
 		"dev": "run-p --print-label --race 'dev:*'",
 		"dev:backend": "cd backend && make start",
-		"dev:frontend": "wait-on firstload/dist/index.js && cd frontend && yarn dev",
-		"dev:client": "cd client && yarn dev",
-		"dev:client-gql": "cd client && yarn gql",
-		"dev:firstload": "cd firstload && yarn dev",
+		"dev:frontend": "yarn workspace @highlight-run/frontend dev",
+		"dev:client": "yarn workspace @highlight-run/client dev",
+		"dev:client-gql": "yarn workspace @highlight-run/client gql",
+		"dev:firstload": "yarn workspace highlight.run dev",
 		"dev:redis": "redis-server",
 		"generate": "hygen",
 		"g": "yarn generate",
@@ -47,8 +47,7 @@
 		"npm-run-all": "^4.1.5",
 		"patch-package": "^6.4.7",
 		"prettier": "^2.7.1",
-		"pretty-quick": "^3.1.3",
-		"wait-on": "^6.0.1"
+		"pretty-quick": "^3.1.3"
 	},
 	"packageManager": "yarn@3.2.3"
 }
