--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 		"format": "prettier --write --ignore-unknown . \"!./data\"",
 		"format-check": "prettier --check --ignore-unknown . \"!./data\"",
 		"ci:backend": "cd backend && doppler run -- ./backend",
-		"ci:build": "cd backend && go build",
+		"ci:build": "yarn ci:install:go && yarn firstload:build",
 		"ci:install:go": "cd backend && go build",
 		"ci:start": "run-p --print-label --race dev:frontend dev:client ci:backend",
 		"cy:run": "cypress run",
