--- a/.github/workflows/highlight-next.yml
+++ b/.github/workflows/highlight-next.yml
@@ -27,6 +27,6 @@ jobs:
               run: cd highlight-next && python3 ../scripts/compare.py -s highlight-next
             - name: Publish
               if: github.ref == 'refs/heads/master'
-              run: cd highlight-next && yarn publish --access public
+              run: cd highlight-next && yarn npm publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
