--- a/.github/workflows/highlight-node.yml
+++ b/.github/workflows/highlight-node.yml
@@ -27,6 +27,6 @@ jobs:
               run: cd highlight-node && python3 ../scripts/compare.py -s highlight-node
             - name: Publish
               if: github.ref == 'refs/heads/master'
-              run: cd highlight-node && yarn publish --access public
+              run: cd highlight-node && yarn npm publish --access public
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
