--- a/.github/workflows/firstload.yml
+++ b/.github/workflows/firstload.yml
@@ -36,6 +36,8 @@ jobs:
               run: cd firstload && python3 ../scripts/compare.py -s firstload
             - name: Publish
               if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/beta'
-              run: yarn workspace highlight.run npm publish --access public
+              run: |
+                  echo npmAuthToken: "$NODE_AUTH_TOKEN" >> ./.yarnrc.yml;
+                  yarn workspace highlight.run npm publish --access public;
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
