--- a/.github/workflows/highlight-node.yml
+++ b/.github/workflows/highlight-node.yml
@@ -15,18 +15,27 @@ jobs:
               with:
                   node-version: 16.14.0
                   registry-url: https://registry.npmjs.org
+            - name: Get yarn cache directory path
+              id: yarn-cache-dir-path
+              run: echo "::set-output name=dir::$(yarn cache dir)"
+            - name: Cache
+              uses: actions/cache@v2.1.6
+              id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+              with:
+                  path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+                  key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
+                  restore-keys: |
+                      ${{ runner.os }}-yarn-
             - name: Install main dependencies
-              run: cd highlight-node && yarn install
-            - name: Install other dependencies
-              run: cd client && yarn install
-            # - name: Run tests
-            #   run: cd highlight-node && yarn test
+              run: yarn
             - name: Build Bundle
-              run: cd highlight-node && yarn build
+              run: yarn workspace @highlight-run/node build
             - name: Confirm new version
               run: cd highlight-node && python3 ../scripts/compare.py -s highlight-node
             - name: Publish
               if: github.ref == 'refs/heads/master'
-              run: cd highlight-node && yarn npm publish --access public
+              run: |
+                  echo npmAuthToken: "$NODE_AUTH_TOKEN" >> ./.yarnrc.yml;
+                  yarn workspace @highlight-run/node npm publish --access public;
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
