--- a/highlight-node/package.json
+++ b/highlight-node/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@highlight-run/node",
-	"version": "1.1.7",
+	"version": "1.2.0",
 	"license": "MIT",
 	"main": "dist/index.js",
 	"module": "esm/index.js",
@@ -17,21 +17,21 @@
 		"gql": "graphql-codegen --config --watch codegen.yml"
 	},
 	"dependencies": {
-		"error-stack-parser": "^2.0.6",
+		"error-stack-parser": "2.0.6",
 		"graphql": "15",
-		"graphql-request": "^3.7.0",
-		"graphql-tag": "^2.12.6",
-		"highlight.run": "^2.9.0",
-		"lru-cache": "^7.3.1",
-		"npm-run-all": "^4.1.5",
-		"typescript": "^4.5.5"
+		"graphql-request": "3.7.0",
+		"graphql-tag": "2.12.6",
+		"highlight.run": "workspace:*",
+		"lru-cache": "7.3.1",
+		"npm-run-all": "4.1.5",
+		"typescript": "4.5.5"
 	},
 	"devDependencies": {
-		"@graphql-codegen/cli": "^2.11.2",
-		"@graphql-codegen/typescript": "^2.7.2",
-		"@graphql-codegen/typescript-graphql-request": "^4.5.2",
-		"@graphql-codegen/typescript-operations": "^2.5.2",
-		"@types/lru-cache": "^5.1.1",
-		"@types/node": "^17.0.13"
+		"@graphql-codegen/cli": "2.11.2",
+		"@graphql-codegen/typescript": "2.7.2",
+		"@graphql-codegen/typescript-graphql-request": "4.5.2",
+		"@graphql-codegen/typescript-operations": "2.5.2",
+		"@types/lru-cache": "5.1.1",
+		"@types/node": "17.0.13"
 	}
 }
