--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
 		"sourcemap-uploader"
 	],
 	"scripts": {
+		"build:all": "yarn turbo run build",
+		"test:all": "yarn turbo run test",
+		"lint:all": "yarn turbo run lint",
+		"deploy:all": "yarn turbo run deploy",
 		"prepare": "husky install && patch-package",
 		"firstload:build": "yarn workspace @highlight-run/client build && yarn workspace highlight.run build",
 		"frontend:clean": "concurrently 'rm -rf node_modules' 'cd frontend && rm -rf build node_modules' 'cd client && rm -rf dist node_modules' 'cd firstload && rm -rf dist node_modules'",
@@ -38,7 +42,7 @@
 		"format": "prettier --write --ignore-unknown . \"!./data\"",
 		"format-check": "prettier --check --ignore-unknown . \"!./data\"",
 		"ci:backend": "cd backend && doppler run -- ./backend",
-		"ci:build": "yarn ci:install:go && yarn firstload:build",
+		"ci:build": "run-p --print-label ci:install:go build:all",
 		"ci:install:go": "cd backend && go build",
 		"ci:start": "run-p --print-label --race dev:frontend dev:client ci:backend",
 		"cy:run": "cypress run",
@@ -53,7 +57,8 @@
 		"npm-run-all": "^4.1.5",
 		"patch-package": "^6.4.7",
 		"prettier": "^2.7.1",
-		"pretty-quick": "^3.1.3"
+		"pretty-quick": "^3.1.3",
+		"turbo": "^1.5.4"
 	},
 	"packageManager": "yarn@3.2.3"
 }
