--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,12 +85,9 @@
 		"dev:vite": "vite",
 		"dev:tsm": "tsm src -w --logLevel=error",
 		"dev:gql": "graphql-codegen --config --watch codegen.yml",
-		"gql:nowatch": "graphql-codegen --config codegen.yml",
+		"codegen": "graphql-codegen --config codegen.yml",
 		"build": "vite build",
-		"test": "TZ=UTC vitest",
-		"lint": "yarn lint:es && stylelint \"**/*.scss\"",
-		"lint:es": "eslint --fix \"src/**/*.{ts,tsx}\"",
-		"lint:css": "stylelint \"**/*.scss\" --fix",
+		"test": "TZ=UTC vitest --run",
 		"analyze": "source-map-explorer 'build/static/js/*.js'",
 		"svg": "svgr --typescript ./src/static --out-dir ./src/static --icon && yarn lint:es"
 	},
