--- a/highlight-next/package.json
+++ b/highlight-next/package.json
@@ -8,8 +8,7 @@
 		"build:cjs": "tsc -p tsconfig.cjs.json",
 		"build:dev": "run-s build",
 		"build:es5": "yarn build:cjs # *** backwards compatibility - remove in v7 ***",
-		"build:esm": "tsc -p tsconfig.esm.json",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"build:esm": "tsc -p tsconfig.esm.json"
 	},
 	"author": "",
 	"license": "ISC",
