--- a/package.json
+++ b/package.json
@@ -22,31 +22,24 @@
 	],
 	"scripts": {
 		"build:all": "yarn turbo run build",
-		"test:all": "yarn turbo run test",
-		"lint:all": "yarn turbo run lint",
-		"deploy:all": "yarn turbo run deploy",
-		"prepare": "husky install && patch-package",
-		"firstload:build": "yarn workspace @highlight-run/client build && yarn workspace highlight.run build",
-		"frontend:clean": "concurrently 'rm -rf node_modules' 'cd frontend && rm -rf build node_modules' 'cd client && rm -rf dist node_modules' 'cd firstload && rm -rf dist node_modules'",
-		"frontend:build": "yarn firstload:build && yarn workspace @highlight-run/frontend build",
-		"frontend:start": "yarn firstload:build && run-p --print-label --race dev:client dev:client-gql dev:frontend",
-		"dev": "run-p --print-label --race 'dev:*'",
-		"dev:backend": "cd backend && make start",
-		"dev:frontend": "yarn workspace @highlight-run/frontend dev",
-		"dev:client": "yarn workspace @highlight-run/client dev",
-		"dev:client-gql": "yarn workspace @highlight-run/client gql",
-		"dev:firstload": "yarn workspace highlight.run dev",
-		"dev:redis": "redis-server",
-		"generate": "hygen",
-		"g": "yarn generate",
-		"format": "prettier --write --ignore-unknown . \"!./data\"",
-		"format-check": "prettier --check --ignore-unknown . \"!./data\"",
+		"build:frontend": "yarn turbo run build --filter frontend...",
 		"ci:backend": "cd backend && doppler run -- ./backend",
-		"ci:build": "run-p --print-label ci:install:go build:all",
+		"ci:build": "run-p --print-label build:frontend ci:install:go",
 		"ci:install:go": "cd backend && go build",
 		"ci:start": "run-p --print-label --race dev:frontend dev:client ci:backend",
 		"cy:run": "cypress run",
-		"cy:run:chrome": "cypress run --headed --browser chrome"
+		"cy:run:chrome": "cypress run --headed --browser chrome",
+		"dev": "run-p --print-label --race 'dev:*'",
+		"dev:backend": "cd backend && make start",
+		"dev:frontend": "yarn turbo run dev --filter frontend...",
+		"dev:redis": "redis-server",
+		"format-check": "prettier --check --ignore-unknown . \"!./data\"",
+		"format:all": "prettier --write --ignore-unknown . \"!./data\"",
+		"frontend:start": "yarn dev:frontend",
+		"g": "yarn generate",
+		"generate": "hygen",
+		"prepare": "husky install && patch-package",
+		"test:all": "yarn turbo run test"
 	},
 	"devDependencies": {
 		"@types/node": "^18.7.14",
