--- a/frontend/package.json
+++ b/frontend/package.json
@@ -86,7 +86,7 @@
 		"dev:tsm": "tsm src -w --logLevel=error",
 		"dev:gql": "graphql-codegen --config --watch codegen.yml",
 		"codegen": "graphql-codegen --config codegen.yml",
-		"build": "vite build",
+		"build": "NODE_OPTIONS='--max-old-space-size=7168' vite build",
 		"test": "TZ=UTC vitest --run",
 		"analyze": "source-map-explorer 'build/static/js/*.js'",
 		"svg": "svgr --typescript ./src/static --out-dir ./src/static --icon && yarn lint:es"
