--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -20,27 +20,32 @@ jobs:
             - name: Check out code
               uses: actions/checkout@v2
 
+            # automatically caches dependencies based on yarn.lock
             - name: Setup Node.js environment
               uses: actions/setup-node@v2
               with:
                   node-version: 16
                   cache: 'yarn'
 
-            - name: Get yarn cache directory path
-              id: yarn-cache-dir-path
-              run: echo "::set-output name=dir::$(yarn cache dir)"
-
-            - name: Cache
-              uses: actions/cache@v2.1.6
-              id: yarn-cache
-              with:
-                  path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-                  key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
-                  restore-keys: |
-                      ${{ runner.os }}-yarn-
-
             - name: Install dependencies
               run: yarn
 
-            - name: Build & Test
+            - name: Check formatting
+              run: yarn format-check
+
+            - name: Build & test
               run: yarn test:all
+
+            - name: Upload frontend sourcemaps
+              if: github.ref == 'refs/heads/master'
+              run: |
+                  SOURCEMAP=true yarn build:frontend
+                  yarn sourcemaps:frontend
+              env:
+                  HIGHLIGHT_API_KEY: ${{ secrets.HIGHLIGHT_SOURCEMAP_API_KEY }}
+
+            - name: Publish npm packages
+              if: github.ref == 'refs/heads/master'
+              run: yarn publish:all
+              env:
+                  NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
