rrweb hot reloading

--- a/packages/rrweb-player/package.json
+++ b/packages/rrweb-player/package.json
@@ -59,6 +59,5 @@
 	"bugs": {
 		"url": "https://github.com/rrweb-io/rrweb/issues"
 	},
-	"homepage": "https://github.com/rrweb-io/rrweb#readme",
-	"gitHead": "d5751f9e6c52a7734597c8595caa763d0f4dd4ad"
+	"homepage": "https://github.com/rrweb-io/rrweb#readme"
 }
