--- a/packages/rrdom/tsconfig.json
+++ b/packages/rrdom/tsconfig.json
@@ -12,7 +12,8 @@
 		"lib": ["es6", "dom"],
 		"skipLibCheck": true,
 		"declaration": true,
-		"importsNotUsedAsValues": "error"
+		"importsNotUsedAsValues": "error",
+		"composite": true
 	},
 	"compileOnSave": true,
 	"exclude": ["test"],
