--- a/packages/rrweb-snapshot/package.json
+++ b/packages/rrweb-snapshot/package.json
@@ -48,14 +48,14 @@
 		"@types/puppeteer": "^1.12.4",
 		"cross-env": "^5.2.0",
 		"eslint": "^8.23.1",
-		"jest": "^27.2.4",
+		"jest": "27.2.5",
 		"jest-snapshot": "^23.6.0",
 		"jsdom": "^16.4.0",
 		"puppeteer": "^1.15.0",
 		"rollup": "^2.45.2",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-typescript2": "^0.31.2",
-		"ts-jest": "^27.0.5",
+		"ts-jest": "27.1.5",
 		"ts-node": "^7.0.1",
 		"tslib": "^1.9.3",
 		"typescript": "^4.7.3"
