--- a/packages/rrweb/tsconfig.json
+++ b/packages/rrweb/tsconfig.json
@@ -3,8 +3,9 @@
 		"typeRoots": ["../../node_modules"],
 		"types": [
 			"@highlight-run/rrdom",
-			"@types/offscreencanvas",
-			"@types/node"
+			"@types/jest",
+			"@types/node",
+			"@types/offscreencanvas"
 		],
 		"module": "ESNext",
 		"moduleResolution": "Node",
@@ -13,6 +14,7 @@
 		"strictNullChecks": true,
 		"removeComments": true,
 		"preserveConstEnums": true,
+		"allowSyntheticDefaultImports": true,
 		"rootDir": "src",
 		"outDir": "build",
 		"lib": ["esnext", "dom"],
