reference rrweb via git submodule

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -35,6 +35,6 @@
 	"references": [
 		{ "path": "../client" },
 		{ "path": "../firstload" },
-		{ "path": "../packages/rrweb" }
+		{ "path": "../rrweb/packages/rrweb" }
 	]
 }
