--- a/highlight-node/tsconfig.cjs.json
+++ b/highlight-node/tsconfig.cjs.json
@@ -5,5 +5,5 @@
 		"module": "commonjs",
 		"outDir": "dist"
 	},
-	"references": [{ "path": "../packages/rrweb" }]
+	"references": [{ "path": "../rrweb/packages/rrweb" }]
 }
