--- a/highlight-node/tsconfig.json
+++ b/highlight-node/tsconfig.json
@@ -17,5 +17,5 @@
 		"types": ["node"]
 	},
 	"include": ["src"],
-	"references": [{ "path": "../packages/rrweb" }]
+	"references": [{ "path": "../rrweb/packages/rrweb" }]
 }
