--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,5 +24,5 @@
 	"include": ["src"],
 	"exclude": ["src/**/*.test.tsx"],
 	"files": ["package.json"],
-	"references": [{ "path": "../packages/rrweb" }]
+	"references": [{ "path": "../rrweb/packages/rrweb" }]
 }
