--- a/highlight-next/tsconfig.cjs.json
+++ b/highlight-next/tsconfig.cjs.json
@@ -6,5 +6,5 @@
 		"outDir": "dist",
 		"removeComments": true
 	},
-	"references": [{ "path": "../packages/rrweb" }]
+	"references": [{ "path": "../rrweb/packages/rrweb" }]
 }
