--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -10,6 +10,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v3
+              with:
+                  submodules: recursive
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
