--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -54,6 +54,8 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v3
+              with:
+                  submodules: recursive
             - name: Setup Node.js
               uses: actions/setup-node@v2
               with:
