--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -17,8 +17,8 @@ jobs:
             TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
 
         steps:
-            - name: Check out code
-              uses: actions/checkout@v2
+            - name: Checkout
+              uses: actions/checkout@v3
               with:
                   submodules: recursive
 
