--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -11,6 +11,7 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
               with:
+                  token: ${{ secrets.GH_REPO_TOKEN }}
                   submodules: recursive
             - name: Setup Go
               uses: actions/setup-go@v3
