--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -55,6 +55,7 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v3
               with:
+                  token: ${{ secrets.GH_REPO_TOKEN }}
                   submodules: recursive
             - name: Setup Node.js
               uses: actions/setup-node@v2
