--- a/client/src/workers/tsconfig.json
+++ b/client/src/workers/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
-		"lib": ["webworker"]
+		"lib": ["webworker", "ESNext"],
+		"rootDir": ".."
 	},
 	"exclude": ["workers.d.ts"]
 }
