--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -93,11 +93,9 @@ jobs:
               env:
                   DOPPLER_TOKEN: ${{ secrets.DOPPLER_E2E_TOKEN }}
                   NODE_EXTRA_CA_CERTS: ./backend/localhostssl/server.crt
-            # Enable this step + remove `video: false` in `cypress.config.js` if
-            # you want to see a recording of your failures in CI.
-            # - name: Save videos
-            #   uses: actions/upload-artifact@v2
-            #   if: failure()
-            #   with:
-            #       name: cypress-videos
-            #       path: cypress/videos
+            - name: Save videos
+              uses: actions/upload-artifact@v2
+              if: failure()
+              with:
+                  name: cypress-videos
+                  path: cypress/videos
