--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,14 +60,15 @@
 		"**/*.chunk.js": true,
 		"**/*.js.map": true,
 		"**/*.min.js": true,
-		"**/*.scss.d.ts": true,
-		"**/yarn-error.log": true,
 		"backend/errors/test-files/*": true,
-		"backend/event-parse/sample-events/*.json": true,
-		"backend/go.sum": true,
-		"backend/payload/*": true,
 		"backend/private-graph/graph/generated/*": true,
-		"backend/public-graph/graph/generated/*": true
+		"backend/public-graph/graph/generated/*": true,
+		"backend/go.sum": true,
+		"backend/event-parse/sample-events/*.json": true,
+		"**/*.scss.d.ts": true,
+		// "frontend/src/graph/generated/*": true,
+		"backend/payload/*": true,
+		"**/yarn-error.log": true
 	},
 	"cSpell.words": ["Blocklist", "interactable"],
 	"[yaml]": {
@@ -75,8 +76,5 @@
 	},
 	"[sql]": {
 		"editor.defaultFormatter": "mtxr.sqltools"
-	},
-	"search.exclude": {
-		"frontend/src/graph/generated/*": true
 	}
 }
