e2e should run dev frontend without build deps

--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
 	],
 	"scripts": {
 		"build:all": "yarn turbo run prepublish build",
+		"build:backend": "cd backend && go build",
 		"build:frontend": "yarn turbo run build --filter frontend...",
 		"ci:backend": "cd backend && doppler run -- ./backend",
-		"ci:build": "run-p --print-label build:frontend ci:install:go",
-		"ci:install:go": "cd backend && go build",
-		"ci:start": "run-p --print-label dev:frontend ci:backend",
+		"ci:build": "run-p --print-label build:frontend build:backend",
+		"ci:frontend": "yarn dev:frontend --only",
+		"ci:start": "run-p --print-label ci:frontend ci:backend",
 		"cy:run": "cypress run",
 		"cy:run:chrome": "cypress run --headed --browser chrome",
 		"dev": "run-p --print-label --race 'dev:*'",
