--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -8,11 +8,13 @@ jobs:
         name: Push Docker image to Docker Hub
         runs-on: ubuntu-latest
         steps:
+            - name: Use HTTPS for checkout
+              run: echo -e '[url "https://github.com/"]\n  insteadOf = "git@github.com:"' >> ~/.gitconfig
             - name: Checkout
               uses: actions/checkout@v3
               with:
                   token: ${{ secrets.GH_REPO_TOKEN }}
-                  submodules: recursive
+                  submodules: true
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
