--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -53,11 +53,13 @@ jobs:
                 ports:
                     - 6379:6379
         steps:
+            - name: Use HTTPS for checkout
+              run: echo -e '[url "https://github.com/"]\n  insteadOf = "git@github.com:"' >> ~/.gitconfig
             - name: Checkout
               uses: actions/checkout@v3
               with:
                   token: ${{ secrets.GH_REPO_TOKEN }}
-                  submodules: recursive
+                  submodules: true
             - name: Setup Node.js
               uses: actions/setup-node@v2
               with:
