--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -83,8 +83,8 @@ jobs:
                   psql -h $PSQL_HOST -U $PSQL_USER $PSQL_DB < ../scripts/migrations/init.sql
               env:
                   DOPPLER_TOKEN: ${{ secrets.DOPPLER_E2E_TOKEN }}
-            - name: Install Go and NPM dependencies
-              run: yarn && yarn ci:install:go
+            - name: Install dependencies
+              run: yarn
             - name: Build frontend + backend
               run: yarn ci:build
             - name: Run Cypress tests
