--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -90,6 +90,7 @@ jobs:
             - name: Run Cypress tests
               uses: cypress-io/github-action@v4
               with:
+                  # frontend dependencies of ci:frontend are built prior by ci:build
                   start: yarn ci:start
                   wait-on: 'https://localhost:3000, http://localhost:8080/dist/index.js, https://localhost:8082/health'
               env:
