--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
 		"ci:backend": "cd backend && doppler run -- ./backend",
 		"ci:build": "run-p --print-label build:frontend build:backend",
 		"ci:frontend": "yarn turbo run dev --filter frontend --filter client --filter firstload --only",
-		"ci:start": "run-p --print-label ci:frontend ci:backend",
+		"ci:start": "run-p --print-label --race ci:frontend ci:backend",
 		"cy:run": "cypress run",
 		"cy:run:chrome": "cypress run --headed --browser chrome",
 		"dev": "run-p --print-label --race 'dev:*'",
