--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -61,13 +61,10 @@ jobs:
                   token: ${{ secrets.GH_REPO_TOKEN }}
                   submodules: true
             - name: Setup Node.js
-              uses: actions/setup-node@v2
+              uses: actions/setup-node@v3
               with:
                   node-version: 16
-                  registry-url: https://registry.npmjs.org
-                  cache: yarn
-                  cache-dependency-path: |
-                      yarn.lock
+                  cache: 'yarn'
             - name: Setup Go
               uses: actions/setup-go@v3
               with:
