--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -85,8 +85,9 @@ jobs:
             - name: Run Cypress tests
               uses: cypress-io/github-action@v4
               with:
+                  install: false
                   # frontend dependencies of ci:frontend are built prior by ci:build
-                  start: yarn ci:start
+                  start: yarn ci:frontend, yarn ci:backend
                   wait-on: 'https://localhost:3000, http://localhost:8080/dist/index.js, https://localhost:8082/health'
               env:
                   DOPPLER_TOKEN: ${{ secrets.DOPPLER_E2E_TOKEN }}
