Revert "revert https changes"
This reverts commit 3c52ef6b10e942ce327b6fd31c83261398733fc8.

--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -53,6 +53,8 @@ jobs:
                 ports:
                     - 6379:6379
         steps:
+            - name: Use HTTPS for checkout
+              run: echo -e '[url "https://github.com/"]\n  insteadOf = "git@github.com:"' >> ~/.gitconfig
             - name: Checkout
               uses: actions/checkout@v3
               with:
