--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -94,9 +94,10 @@ jobs:
               env:
                   DOPPLER_TOKEN: ${{ secrets.DOPPLER_E2E_TOKEN }}
                   NODE_EXTRA_CA_CERTS: ./backend/localhostssl/server.crt
-            - name: Save videos
-              uses: actions/upload-artifact@v2
-              if: failure()
-              with:
-                  name: cypress-videos
-                  path: cypress/videos
+#            Cypress video creation is very slow
+#            - name: Save videos
+#              uses: actions/upload-artifact@v2
+#              if: failure()
+#              with:
+#                  name: cypress-videos
+#                  path: cypress/videos
