--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -72,7 +72,7 @@ jobs:
               with:
                   go-version-file: 'backend/go.mod'
                   cache: true
-                  cache-dependency-path: backend/go.mod
+                  cache-dependency-path: backend/go.sum
             - name: Install Doppler CLI
               uses: dopplerhq/cli-action@v1
             - name: Migrate and seed database
